add openapi spec for /v1/record/telegram/identity [post]
